tests/machine/x/python/cross_join_filter.py
# Generated by Mochi Python compiler
from __future__ import annotations
import dataclasses


@dataclasses.dataclass
class Auto1:
    n: int
    l: str


nums = [1, 2, 3]
letters = ["A", "B"]
pairs = [Auto1(n=n, l=l) for n in nums if n % 2 == 0 for l in letters]
print("--- Even pairs ---")
for p in pairs:
    print(p["n"], p["l"])
